--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
     <script src="js/picture.js"></script>
   </head>
   <body>
-    <div style="display: none">
+    <div style="display: none;">
       <include src="build/img/sprite.svg"></include>
     </div>
     <header class="header">
@@ -209,7 +209,7 @@
       <div class="popup">
         <h3 class="popup__title">Добавить  в корзину</h3>
         <p class="popup__text">Выберите размер:</p>
-        <form class="pupup__form" id="popup-form">
+        <form class="popup__form" id="popup-form">
           <input class="popup__checkbox visually-hidden" id="popup-checkbox" form="popup-form" type="checkbox" name="popup-form-s" checked>
           <label class="popup__label" for="popup-checkbox" aria-label="Маленький">S</label>
           <input class="popup__checkbox visually-hidden" id="popup-checkbox2" form="popup-form" type="checkbox" name="popup-form-m">
