--- a/source/index.html
+++ b/source/index.html
@@ -207,7 +207,7 @@
       <div class="popup">
         <h3 class="popup__title">Добавить  в корзину</h3>
         <p class="popup__text">Выберите размер:</p>
-        <form class="pupup__form" id="popup-form">
+        <form class="popup__form" id="popup-form">
           <input class="popup__checkbox visually-hidden" id="popup-checkbox" form="popup-form" type="checkbox" name="popup-form-s" checked>
           <label class="popup__label" for="popup-checkbox" aria-label="Маленький">S</label>
           <input class="popup__checkbox visually-hidden" id="popup-checkbox2" form="popup-form" type="checkbox" name="popup-form-m">
