--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,7 +48,7 @@
                   <use xlink:href="#icon-cart">
                   </use>
                 </svg>
-                Корзина: пока пуста
+                Корзина:&nbspпока&nbspпуста
               </a>
             </li>
           </ul>
