--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
                   <use xlink:href="#icon-cart">
                   </use>
                 </svg>
-                Корзина: пока пуста
+                Корзина:&nbspпока&nbspпуста
               </a>
             </li>
           </ul>
@@ -74,38 +74,46 @@
         <a class="category__item category__item--02" href="#"><p>Детские  игрушки</p></a>
       </section>
 
-      <div class="main__wrapper"></div>
-
       <section class="product">
         <div class="product__name">
           <h3 class="product__denotation">Вязаные корзинки</h3>
           <h6 class="product__attribute">Товар недели</h6>
         </div>
-        <p class="product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-        <table class="product__table">
-          <tr>
-            <th>Цвет:</th>
-            <td>«Тиффани»/серый</td>
-          </tr>
-          <tr>
-            <th>Диаметр:</th>
-            <td>25 см</td>
-          </tr>
-          <tr>
-            <th>Высота:</th>
-            <td>15 см</td>
-          </tr>
-        </table>
-        <picture>
-          <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
-          <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@1x.jpg 2x">
-          <img class=" product__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязанные корзинки разного диаметра" width="260" height="315">
-        </picture>
-        <p class="product__price">Цена: 990 руб.</p>
-        <a class="btn product__btn" href="#">ЗАКАЗАТЬ</a>
+        <div class="product__wrapper">
+          <div class="product__container">
+          <p class="product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+          <table class="product__table">
+            <tr>
+              <th>Цвет:</th>
+              <td>«Тиффани»/серый</td>
+            </tr>
+            <tr>
+              <th>Диаметр:</th>
+              <td>25 см</td>
+            </tr>
+            <tr>
+              <th>Высота:</th>
+              <td>15 см</td>
+            </tr>
+          </table>
+          </div>
+          <figure class="product__figure">
+          <a href="img/triple-set-desktop@1x.jpg">
+            <picture>
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
+              <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@1x.jpg 2x">
+              <img class=" product__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязанные корзинки разного диаметра" width="260" height="315">
+            </picture>
+           </a>
+          </figure>
+        </div>
+        <div class="product__description">
+          <p class="product__price">Цена: 990 руб.</p>
+          <a class="btn product__btn" href="#">ЗАКАЗАТЬ</a>
+        </div>
       </section>
 
       <div class="main__wrapper"></div>
