--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,7 @@
         <button class="header__btn-burger btn" type="button"></button>
         <div class="header__nav-wrapper">
           <ul class="header__list nav header__list--site">
-            <li class="header__item"><a class="header__link" href="catalog.html">Каталог товаров</a></li>
+            <li class="header__item"><a class="header__link " href="catalog.html">Каталог товаров</a></li>
             <li class="header__item"><a class="header__link" href="form.html">Вязание на заказ</a></li>
           </ul>
 
@@ -49,7 +49,7 @@
                   <use xlink:href="#icon-cart">
                   </use>
                 </svg>
-                Корзина: пока пуста
+                Корзина:&nbspпока&nbspпуста
               </a>
             </li>
           </ul>
@@ -71,9 +71,9 @@
       <form class="main__form form" method="post" action="https://echo.htmlacademy.ru" autocomplete="on" name="form" id="knitting_form" accept-charset="utf-8">
         <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами чтобы уточнить детали.</p>
 
-        <div class="fieldset__wrappper">
+        <div class="fieldset__wrapper">
           <fieldset class="form__fieldset fieldset">
-            <legend class="fieldset-legend">Тип</legend>
+            <legend class="fielset__legen">Тип</legend>
             <div class="fieldset__container">
               <input class="form__radio" type="radio" form="knitting_form" id="knitting_accessories" name="knitting" checked>
               <label class="form__lbl-radio" tabindex="0" for="knitting_accessories" tabindex="0">Аксессуар для  интерьера</label>
@@ -83,9 +83,9 @@
           </fieldset>
         </div>
 
-        <div class="fieldset__wrappper">
+        <div class="fieldset__wrapper">
           <fieldset class="form__fieldset fieldset form__fieldset--checbx">
-            <legend class="fieldset-legend">Цвет</legend>
+            <legend class="fielset__legen">Цвет</legend>
             <div class="fieldset__container fieldset__container--checbx">
               <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_white" checked>
               <label class="form__lbl-checbx" for="knitting_c_white" tabindex="0">Белый</label>
@@ -113,9 +113,9 @@
           </fieldset>
         </div>
 
-        <div class="fieldset__wrappper">
+        <div class="fieldset__wrapper">
           <fieldset class="form__fieldset fieldset">
-            <legend class="fieldset-legend">ФИО</legend>
+            <legend class="fielset__legen">ФИО</legend>
             <div class="fieldset__container fieldset__container--data">
               <label class="form__label form__label--text" for="client_name">Имя:</label>
               <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" form="knitting_form" id="client_name" required>
@@ -131,27 +131,25 @@
           </fieldset>
         </div>
 
-        <div class="fieldset__wrappper fieldset__wrappper--tel">
-          <fieldset class="form__fieldset fieldset form__fieldset--tel">
-            <legend class="fieldset-legend fieldset-legend--tel">тел</legend>
+        <div class="fieldset__wrapper fieldset__wrapper--tel">
+          <fieldset class="form__fieldset fieldset form__fieldset--contacts">
+            <legend class="fielset__legen fielset__legen--tel">тел</legend>
             <div class="fieldset__container fieldset__container--contacts">
               <label class="fieldset__lbl" for="client_tel"></label>
               <input class="form__input-text  form__input-text--tel" type="tel" name="phone"
                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
-              <svg class="icon-phone" aria-label="phone">
+              <svg class="icon icon-phone" aria-label="phone">
                 <use xlink:href="#icon-phone"></use>
               </svg>
             </div>
           </fieldset>
-        </div>
 
-        <div class="fieldset__wrappper">
-          <fieldset class="form__fieldset fieldset">
-            <legend class="fieldset-legend fieldset-legend--email">E-mail</legend>
+          <fieldset class="form__fieldset fieldset form__fieldset--contacts">
+            <legend class="fielset__legen fielset__legen--email">E-mail</legend>
             <div class="fieldset__container fieldset__container--contacts">
               <label class="fieldset__lbl" for="client_email"></label>
               <input class="form__input-text form__input-text--email" type="email" placeholder="Ваш Email*" form="knitting_form" id="client_email" required>
-              <svg class="icon-mail" aria-label="mail">
+              <svg class="icon icon-mail" aria-label="mail">
                 <use xlink:href="#icon-mail">
                 </use>
               </svg>
@@ -159,10 +157,10 @@
           </fieldset>
         </div>
 
-        <div class="fieldset__wrappper">
+        <div class="fieldset__wrapper">
           <fieldset class="form__fieldset fieldset">
+              <legend class="fielset__legen">Доп</legend>
            <div class="fieldset__container fieldset__container--textarea">
-            <legend class="fieldset-legend">Доп</legend>
             <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
           </div>
           </fieldset>
