--- a/source/index.html
+++ b/source/index.html
@@ -74,6 +74,8 @@
         <a class="category__item category__item--02" href="#"><p>Детские  игрушки</p></a>
       </section>
 
+      <div class="main__wrapper"></div>
+
       <section class="product">
         <div class="product__name">
           <h3 class="product__denotation">Вязаные корзинки</h3>
