--- a/source/form.html
+++ b/source/form.html
@@ -72,20 +72,20 @@
         <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами чтобы уточнить детали.</p>
 
         <div class="fieldset__wrapper">
-          <fieldset class="form__fieldset fieldset">
-            <legend class="fielset__legen">Тип</legend>
+          <div class="form__fieldset fieldset">
+            <h4 class="fielset__h4">Тип</h4>
             <div class="fieldset__container">
               <input class="form__radio" type="radio" form="knitting_form" id="knitting_accessories" name="knitting" checked>
               <label class="form__lbl-radio" tabindex="0" for="knitting_accessories" tabindex="0">Аксессуар для  интерьера</label>
               <input class="form__radio" type="radio" form="knitting_form" id="knitting_toys" name="knitting">
               <label class="form__lbl-radio" tabindex="0" for="knitting_toys" tabindex="0">Детская игрушка</label>
             </div>
-          </fieldset>
+          </div>
         </div>
 
         <div class="fieldset__wrapper">
-          <fieldset class="form__fieldset fieldset form__fieldset--checbx">
-            <legend class="fielset__legen">Цвет</legend>
+          <div class="form__fieldset fieldset form__fieldset--checbx">
+            <h4 class="fielset__h4">Цвет</h4>
             <div class="fieldset__container fieldset__container--checbx">
               <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_white" checked>
               <label class="form__lbl-checbx" for="knitting_c_white" tabindex="0">Белый</label>
@@ -110,12 +110,12 @@
               <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_orange">
               <label class="form__lbl-checbx" for="knitting_c_orange" tabindex="0">Оранжевый</label>
             </div>
-          </fieldset>
+          </div>
         </div>
 
         <div class="fieldset__wrapper">
-          <fieldset class="form__fieldset fieldset">
-            <legend class="fielset__legen">ФИО</legend>
+          <div class="form__fieldset fieldset">
+            <h4 class="fielset__h4">ФИО</h4>
             <div class="fieldset__container fieldset__container--data">
               <label class="form__label form__label--text" for="client_name">Имя:</label>
               <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" form="knitting_form" id="client_name" required>
@@ -128,23 +128,24 @@
               <label class="form__label form__label--text" for="client_fathers">Отчество:</label>
               <input class="form__input-text" type="text" name="name" placeholder="Отчество, если желаете" form="knitting_form" id="client_fathers">
             </div>
-          </fieldset>
+          </div>
         </div>
 
         <div class="fieldset__wrapper fieldset__wrapper--tel">
-          <fieldset class="form__fieldset fieldset form__fieldset--contacts">
-            <legend class="fielset__legen fielset__legen--tel">тел</legend>
+          <div class="form__fieldset fieldset form__fieldset--contacts">
+            <h4 class="fielset__h4 fielset__h4--tel">тел</h4>
             <div class="fieldset__container fieldset__container--contacts">
               <label class="fieldset__lbl" for="client_tel"></label>
-              <input class="form__input-text  form__input-text--tel" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
+              <input class="form__input-text  form__input-text--tel" type="tel" name="phone"
+                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
               <svg class="icon icon-phone" aria-label="phone">
                 <use xlink:href="#icon-phone"></use>
               </svg>
             </div>
-          </fieldset>
+          </div>
 
-          <fieldset class="form__fieldset fieldset form__fieldset--contacts">
-            <legend class="fielset__legen fielset__legen--email">E-mail</legend>
+          <div class="form__fieldset fieldset form__fieldset--contacts">
+            <h4 class="fielset__h4 fielset__h4--email">E-mail</h4>
             <div class="fieldset__container fieldset__container--contacts">
               <label class="fieldset__lbl" for="client_email"></label>
               <input class="form__input-text form__input-text--email" type="email" placeholder="Ваш Email*" form="knitting_form" id="client_email" required>
@@ -153,16 +154,16 @@
                 </use>
               </svg>
             </div>
-          </fieldset>
+          </div>
         </div>
 
         <div class="fieldset__wrapper">
-          <fieldset class="form__fieldset fieldset">
-            <legend class="fielset__legen">Доп</legend>
-            <div class="fieldset__container fieldset__container--textarea">
-              <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
-            </div>
-          </fieldset>
+          <div class="form__fieldset fieldset">
+              <h4 class="fielset__h4">Доп</h4>
+           <div class="fieldset__container fieldset__container--textarea">
+            <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
+          </div>
+          </div>
         </div>
         <div class="form__fieldset-btn">
             <p class="form__description-btn">*-Поля обязательные для заполнения</p>
