--- a/source/form.html
+++ b/source/form.html
@@ -73,7 +73,7 @@
 
         <div class="fieldset__wrapper">
           <div class="form__fieldset fieldset">
-            <h4 class="fielset__h4">Тип</h4>
+            <h4 class="fieldset__title">Тип</h4>
             <div class="fieldset__container">
               <input class="form__radio" type="radio" form="knitting_form" id="knitting_accessories" name="knitting" checked>
               <label class="form__lbl-radio" tabindex="0" for="knitting_accessories" tabindex="0">Аксессуар для  интерьера</label>
@@ -85,7 +85,7 @@
 
         <div class="fieldset__wrapper">
           <div class="form__fieldset fieldset form__fieldset--checbx">
-            <h4 class="fielset__h4">Цвет</h4>
+            <h4 class="fieldset__title">Цвет</h4>
             <div class="fieldset__container fieldset__container--checbx">
               <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_white" checked>
               <label class="form__lbl-checbx" for="knitting_c_white" tabindex="0">Белый</label>
@@ -115,7 +115,7 @@
 
         <div class="fieldset__wrapper">
           <div class="form__fieldset fieldset">
-            <h4 class="fielset__h4">ФИО</h4>
+            <h4 class="fieldset__title">ФИО</h4>
             <div class="fieldset__container fieldset__container--data">
               <label class="form__label form__label--text" for="client_name">Имя:</label>
               <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" form="knitting_form" id="client_name" required>
@@ -133,7 +133,7 @@
 
         <div class="fieldset__wrapper fieldset__wrapper--tel">
           <div class="form__fieldset fieldset form__fieldset--contacts">
-            <h4 class="fielset__h4 fielset__h4--tel">тел</h4>
+            <h4 class="fieldset__title fieldset__title--tel">тел</h4>
             <div class="fieldset__container fieldset__container--contacts">
               <label class="fieldset__lbl" for="client_tel"></label>
               <input class="form__input-text  form__input-text--tel" type="tel" name="phone"
@@ -145,7 +145,7 @@
           </div>
 
           <div class="form__fieldset fieldset form__fieldset--contacts">
-            <h4 class="fielset__h4 fielset__h4--email">E-mail</h4>
+            <h4 class="fieldset__title fieldset__title--email">E-mail</h4>
             <div class="fieldset__container fieldset__container--contacts">
               <label class="fieldset__lbl" for="client_email"></label>
               <input class="form__input-text form__input-text--email" type="email" placeholder="Ваш Email*" form="knitting_form" id="client_email" required>
@@ -159,7 +159,7 @@
 
         <div class="fieldset__wrapper">
           <div class="form__fieldset fieldset">
-              <h4 class="fielset__h4">Доп</h4>
+              <h4 class="fieldset__title">Доп</h4>
            <div class="fieldset__container fieldset__container--textarea">
             <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
           </div>
