--- a/source/index.html
+++ b/source/index.html
@@ -74,8 +74,6 @@
         <a class="category__item category__item--02" href="#"><p>Детские  игрушки</p></a>
       </section>
 
-      <div class="main__wrapper"></div>
-
       <section class="product">
         <div class="product__name">
           <h3 class="product__denotation">Вязаные корзинки</h3>
@@ -112,7 +110,7 @@
             </a>
           </figure>
         </div>
-        <div class="product__description">
+        <div class="product__buying">
           <p class="product__price">Цена: 990 руб.</p>
           <a class="btn product__btn" href="#">ЗАКАЗАТЬ</a>
         </div>
