--- a/source/form.html
+++ b/source/form.html
@@ -136,8 +136,7 @@
             <h4 class="fieldset__title fieldset__title--tel">тел</h4>
             <div class="fieldset__container fieldset__container--contacts">
               <label class="fieldset__lbl" for="client_tel"></label>
-              <input class="form__input-text  form__input-text--tel" type="tel" name="phone"
-                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
+              <input class="form__input-text  form__input-text--tel" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
               <svg class="icon icon-phone" aria-label="phone">
                 <use xlink:href="#icon-phone"></use>
               </svg>
@@ -159,10 +158,10 @@
 
         <div class="fieldset__wrapper">
           <div class="form__fieldset fieldset">
-              <h4 class="fieldset__title">Доп</h4>
-           <div class="fieldset__container fieldset__container--textarea">
-            <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
-          </div>
+            <h4 class="fieldset__title">Доп</h4>
+            <div class="fieldset__container fieldset__container--textarea">
+              <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
+            </div>
           </div>
         </div>
         <div class="form__fieldset-btn">
