--- a/source/form.html
+++ b/source/form.html
@@ -71,102 +71,102 @@
       <form class="main__form form" method="post" action="https://echo.htmlacademy.ru" autocomplete="on" name="form" id="knitting_form" accept-charset="utf-8">
         <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами чтобы уточнить детали.</p>
 
-        <div class="fieldset__wrapper">
-          <div class="form__fieldset fieldset">
-            <h4 class="fieldset__title">Тип</h4>
-            <div class="fieldset__container">
-              <input class="form__radio" type="radio" form="knitting_form" id="knitting_accessories" name="knitting" checked>
-              <label class="form__lbl-radio" tabindex="0" for="knitting_accessories" tabindex="0">Аксессуар для  интерьера</label>
-              <input class="form__radio" type="radio" form="knitting_form" id="knitting_toys" name="knitting">
-              <label class="form__lbl-radio" tabindex="0" for="knitting_toys" tabindex="0">Детская игрушка</label>
-            </div>
-          </div>
+        <div class="fieldset__wrapper fieldset__wrapper--radio">
+        <div class="form__fieldset fieldset">
+        <h4 class="fieldset__title fieldset__title--radio">Тип</h4>
+        <div class="fieldset__container">
+        <input class="form__radio" type="radio" form="knitting_form" id="knitting_accessories" name="knitting" checked>
+        <label class="form__lbl-radio" tabindex="0" for="knitting_accessories" tabindex="0">Аксессуар&nbsp;для интерьера</label>
+        <input class="form__radio" type="radio" form="knitting_form" id="knitting_toys" name="knitting">
+        <label class="form__lbl-radio" tabindex="0" for="knitting_toys" tabindex="0">Детская&nbsp;игрушка</label>
+        </div>
+        </div>
+        </div>
+
+        <div class="fieldset__wrapper fieldset__wrapper--checbx">
+        <div class="form__fieldset fieldset form__fieldset--checbx">
+        <h4 class="fieldset__title fieldset__title--checbx">Цвет</h4>
+        <div class="fieldset__container fieldset__container--checbx">
+        <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_white" checked>
+        <label class="form__lbl-checbx" for="knitting_c_white" tabindex="0">Белый</label>
+        </div>
+        <div class="fieldset__container fieldset__container--checbx">
+        <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_grey" checked>
+        <label class="form__lbl-checbx" for="knitting_c_grey" tabindex="0">Серый</label>
+        </div>
+        <div class="fieldset__container fieldset__container--checbx">
+        <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_tiffany">
+        <label class="form__lbl-checbx" for="knitting_c_tiffany" tabindex="0">«Тиффани»</label>
+        </div>
+        <div class="fieldset__container fieldset__container--checbx">
+        <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_black">
+        <label class="form__lbl-checbx" for="knitting_c_black" tabindex="0">Черный</label>
+        </div>
+        <div class="fieldset__container fieldset__container--checbx">
+        <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_pink">
+        <label class="form__lbl-checbx" for="knitting_c_pink" tabindex="0">Розовый</label>
+        </div>
+        <div class="fieldset__container fieldset__container--checbx">
+        <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_orange">
+        <label class="form__lbl-checbx" for="knitting_c_orange" tabindex="0">Оранжевый</label>
+        </div>
+        </div>
         </div>
 
         <div class="fieldset__wrapper">
-          <div class="form__fieldset fieldset form__fieldset--checbx">
-            <h4 class="fieldset__title">Цвет</h4>
-            <div class="fieldset__container fieldset__container--checbx">
-              <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_white" checked>
-              <label class="form__lbl-checbx" for="knitting_c_white" tabindex="0">Белый</label>
-            </div>
-            <div class="fieldset__container fieldset__container--checbx">
-              <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_grey" checked>
-              <label class="form__lbl-checbx" for="knitting_c_grey" tabindex="0">Серый</label>
-            </div>
-            <div class="fieldset__container fieldset__container--checbx">
-              <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_tiffany">
-              <label class="form__lbl-checbx" for="knitting_c_tiffany" tabindex="0">«Тиффани»</label>
-            </div>
-            <div class="fieldset__container fieldset__container--checbx">
-              <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_black">
-              <label class="form__lbl-checbx" for="knitting_c_black" tabindex="0">Черный</label>
-            </div>
-            <div class="fieldset__container fieldset__container--checbx">
-              <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_pink">
-              <label class="form__lbl-checbx" for="knitting_c_pink" tabindex="0">Розовый</label>
-            </div>
-            <div class="fieldset__container fieldset__container--checbx">
-              <input class="form__input" type="checkbox" form="knitting_form" name="knitting-color" id="knitting_c_orange">
-              <label class="form__lbl-checbx" for="knitting_c_orange" tabindex="0">Оранжевый</label>
-            </div>
-          </div>
+        <div class="form__fieldset fieldset form__fieldset--data">
+        <h4 class="fieldset__title fieldset__title--data">ФИО</h4>
+        <div class="fieldset__container fieldset__container--data">
+        <label class="form__label form__label--text" for="client_name">Имя:</label>
+        <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" form="knitting_form" id="client_name" required>
         </div>
-
-        <div class="fieldset__wrapper">
-          <div class="form__fieldset fieldset">
-            <h4 class="fieldset__title">ФИО</h4>
-            <div class="fieldset__container fieldset__container--data">
-              <label class="form__label form__label--text" for="client_name">Имя:</label>
-              <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" form="knitting_form" id="client_name" required>
-            </div>
-            <div class="fieldset__container fieldset__container--data">
-              <label class="form__label form__label--text" for="client_surname">Фамилия:</label>
-              <input class="form__input-text" type="text" name="name" placeholder="Укажите фамилию*" form="knitting_form" id="client_surname" required>
-            </div>
-            <div class="fieldset__container fieldset__container--data">
-              <label class="form__label form__label--text" for="client_fathers">Отчество:</label>
-              <input class="form__input-text" type="text" name="name" placeholder="Отчество, если желаете" form="knitting_form" id="client_fathers">
-            </div>
-          </div>
+        <div class="fieldset__container fieldset__container--data">
+        <label class="form__label form__label--text" for="client_surname">Фамилия:</label>
+        <input class="form__input-text" type="text" name="name" placeholder="Укажите фамилию*" form="knitting_form" id="client_surname" required>
+        </div>
+        <div class="fieldset__container fieldset__container--data">
+        <label class="form__label form__label--text" for="client_fathers">Отчество:</label>
+        <input class="form__input-text" type="text" name="name" placeholder="Отчество, если желаете" form="knitting_form" id="client_fathers">
+        </div>
+        </div>
         </div>
 
         <div class="fieldset__wrapper fieldset__wrapper--tel">
-          <div class="form__fieldset fieldset form__fieldset--contacts">
-            <h4 class="fieldset__title fieldset__title--tel">тел</h4>
-            <div class="fieldset__container fieldset__container--contacts">
-              <label class="fieldset__lbl" for="client_tel"></label>
-              <input class="form__input-text  form__input-text--tel" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
-              <svg class="icon icon-phone" aria-label="phone">
-                <use xlink:href="#icon-phone"></use>
-              </svg>
-            </div>
-          </div>
-
-          <div class="form__fieldset fieldset form__fieldset--contacts">
-            <h4 class="fieldset__title fieldset__title--email">E-mail</h4>
-            <div class="fieldset__container fieldset__container--contacts">
-              <label class="fieldset__lbl" for="client_email"></label>
-              <input class="form__input-text form__input-text--email" type="email" placeholder="Ваш Email*" form="knitting_form" id="client_email" required>
-              <svg class="icon icon-mail" aria-label="mail">
-                <use xlink:href="#icon-mail">
-                </use>
-              </svg>
-            </div>
-          </div>
+        <div class="form__fieldset fieldset form__fieldset--contacts">
+        <h4 class="fieldset__title fieldset__title--tel">тел</h4>
+        <div class="fieldset__container fieldset__container--contacts">
+        <label class="fieldset__lbl" for="client_tel"></label>
+        <input class="form__input-text form__input-text--tel" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
+        <svg class="icon icon-phone" aria-label="phone">
+        <use xlink:href="#icon-phone"></use>
+        </svg>
+        </div>
         </div>
 
-        <div class="fieldset__wrapper">
-          <div class="form__fieldset fieldset">
-            <h4 class="fieldset__title">Доп</h4>
-            <div class="fieldset__container fieldset__container--textarea">
-              <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
-            </div>
-          </div>
+        <div class="form__fieldset fieldset form__fieldset--contacts">
+        <h4 class="fieldset__title fieldset__title--email">E-mail</h4>
+        <div class="fieldset__container fieldset__container--contacts">
+        <label class="fieldset__lbl" for="client_email"></label>
+        <input class="form__input-text form__input-text--email" type="email" placeholder="Ваш Email*" form="knitting_form" id="client_email" required>
+        <svg class="icon icon-mail" aria-label="mail">
+        <use xlink:href="#icon-mail">
+        </use>
+        </svg>
+        </div>
+        </div>
+        </div>
+
+        <div class="fieldset__wrapper fieldset__wrapper--textarea">
+        <div class="form__fieldset fieldset">
+        <h4 class="fieldset__title">Доп</h4>
+        <div class="fieldset__container fieldset__container--textarea">
+        <textarea class="form__input-text form__input-text--textarea" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
+        </div>
+        </div>
         </div>
         <div class="form__fieldset-btn">
-            <p class="form__description-btn">*-Поля обязательные для заполнения</p>
-          <button type="submit" class="btn form__btn">Отправить заказ</button>
+        <p class="form__description-btn">*-Поля обязательные для заполнения</p>
+        <button type="submit" class="btn form__btn">Отправить заказ</button>
         </div>
       </form>
     </main>
