--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,11 +58,11 @@
 
     <main class="main">
       <div class="main__site-theme site__themes">
-        <ul class="site-theme__list site-theme__list1">
+        <ul class="site-theme__list site-theme__list--1">
           <li>Новые поступления</li>
           <li>Распродажа</li>
         </ul>
-        <ul class="site-theme__list site-theme__list2">
+        <ul class="site-theme__list site-theme__list--2">
           <li>Бесплатная доставка по России</li>
         </ul>
         <h1 class="main__title">Каталог товаров</h1>
