--- a/source/index.html
+++ b/source/index.html
@@ -59,11 +59,11 @@
 
     <main class="main">
       <div class="main__site-theme site-theme">
-        <ul class="site-theme__list site-theme__list1">
+        <ul class="site-theme__list site-theme__list--1">
           <li>Новые поступления</li>
           <li>Распродажа</li>
         </ul>
-        <ul class="site-theme__list site-theme__list2">
+        <ul class="site-theme__list site-theme__list--2">
           <li>Бесплатная доставка по России</li>
         </ul>
         <h1 class="site-theme__slogan">Милые штуки ручной  работы для дома</h1>
