--- a/source/form.html
+++ b/source/form.html
@@ -49,7 +49,7 @@
                   <use xlink:href="#icon-cart">
                   </use>
                 </svg>
-                Корзина:&nbspпока&nbspпуста
+                Корзина: пока пуста
               </a>
             </li>
           </ul>
@@ -76,9 +76,9 @@
         <h4 class="fieldset__title fieldset__title--radio">Тип</h4>
         <div class="fieldset__container">
         <input class="form__radio" type="radio" form="knitting_form" id="knitting_accessories" name="knitting" checked>
-        <label class="form__lbl-radio" tabindex="0" for="knitting_accessories" tabindex="0">Аксессуар&nbsp;для интерьера</label>
+        <label class="form__lbl-radio" for="knitting_accessories" tabindex="0">Аксессуар&nbsp;для интерьера</label>
         <input class="form__radio" type="radio" form="knitting_form" id="knitting_toys" name="knitting">
-        <label class="form__lbl-radio" tabindex="0" for="knitting_toys" tabindex="0">Детская&nbsp;игрушка</label>
+        <label class="form__lbl-radio" for="knitting_toys" tabindex="0">Детская&nbsp;игрушка</label>
         </div>
         </div>
         </div>
