--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
                   <use xlink:href="#icon-cart">
                   </use>
                 </svg>
-                Корзина:&nbspпока&nbspпуста
+                Корзина: пока пуста
               </a>
             </li>
           </ul>
